hide exportBtn and importFile

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="row">
       <button id="scanBtn" class="btn primary">NFCスキャン開始</button>
       <button id="resetBtn" class="btn warn">進捗リセット</button>
-      <button id="exportBtn" class="btn">状態を書き出し（JSON）</button>
+      <!-- <button id="exportBtn" class="btn">状態を書き出し（JSON）</button>
       <label class="btn file-label" for="importFile">
         状態を読み込み<input id="importFile" type="file" accept="application/json">
-      </label>
+      </label> -->
     </div>
 
     <details>
