--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
       </label> -->
     </div>
 
-    <details>
+    <!-- <details>
       <summary>⚙️ テスト用（Web NFCが使えない環境向け）</summary>
       <div class="row">
         <input id="testUid" type="text" class="mono" placeholder="UID を入力（例：04A2B3C1）" />
         <button id="testBtn" class="btn">このUIDで“タッチ”</button>
       </div>
       <div class="small muted">※ ここに入力するUIDは、下のカードに表示している想定UIDに合わせてください。</div>
-    </details>
+    </details> -->
 
     <h2>スタンプ一覧</h2>
     <div id="stampGrid" class="grid"></div>
 
     <div id="completeBox" class="complete">🎉 コンプリート！ 全て集まりました！</div>
 
-    <div class="footer">
+    <!-- <div class="footer">
       <p class="muted">
         ヒント：Android + Chrome + HTTPS（または <span class="kbd mono">http://localhost</span>）でご利用ください。  
         Web NFC: <span id="nfcSupport" class="mono"></span>
@@ -44,7 +44,7 @@
         <li>UID一致で該当スタンプのフラグをONにします</li>
         <li>UIDは <span class="mono">script.js</span> の <span class="mono">DEFAULT_STAMPS</span> の <span class="mono">uid</span> を編集すれば変更可能</li>
       </ul>
-    </div>
+    </div> -->
   </div>
 
   <script src="./script.js" defer></script>
