--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>📍 NFCスタンプラリー（ブラウザ完結デモ）</h1>
+    <h1>📍 NFCスタンプラリー（ブラウザ完結デモ）EGG</h1>
     <div class="sub">Android + Chrome（Web NFC）で動作。タグをタッチすると該当スタンプが“押されました✅”になります。</div>
 
     <div class="row">
