--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <!-- Header -->
       <header class="header">
         <div class="title">
-          <img class="title-png" src="./images/title.png" width="200px" height="100px">
+          <img class="title-png" src="./images/title.png">
           <!-- <div class="title-big">NFC</div>
           <div class="title-sub">スタンプラリー</div> -->
         </div>
@@ -38,7 +38,6 @@
           <div class="stamp-card glass">
             <div id="stampCarousel" class="stamp-carousel" aria-label="スタンプ押印エリア">
               <div class="stamp-track"></div>
-              <div class="swipe-arrow" aria-hidden="true"></div>
             </div>
 
             <div id="indicator" class="indicator" aria-label="ページインジケータ"></div>
@@ -93,7 +92,6 @@
           </div>
           <div id="modalBody" class="modal-body"></div>
         </div>
-      </div>
       </div>
     </div>
   </div>
