--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 
         <!-- 全体はほどほど、OOPは通常ガラス -->
         <div class="oop-pill glass" aria-label="現在のポイント">
-          <span class="oop-label">OOP</span>
           <span id="oopValue" class="oop-value">0</span>
+          <span class="oop-label">P</span>
         </div>
       </header>
 
