アイコン変更

--- a/public/index.html
+++ b/public/index.html
@@ -74,13 +74,13 @@
       <!-- Bottom Nav（ここを強めのガラスに） -->
       <nav class="bottom-nav glass-nav" aria-label="ボトムナビゲーション">
         <button class="nav-btn is-active" data-target="stamp" aria-label="スタンプ">
-          <span class="nav-ico">🏷️</span>
+          <span class="nav-ico"><img class="nav-ico-img" src="./images/stamp.png" alt="スタンプ"></span>
         </button>
         <button class="nav-btn" data-target="pay" aria-label="決済">
-          <span class="nav-ico">💲</span>
+          <span class="nav-ico"><img class="nav-ico-img" src="./images/pay.png" alt="決済"></span>
         </button>
         <button class="nav-btn" data-target="profile" aria-label="プロフィール">
-          <span class="nav-ico">👤</span>
+          <span class="nav-ico"><img class="nav-ico-img" src="./images/profile.png" alt="プロフィール"></span>
         </button>
       </nav>
 
