色々変更スペシャル3

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
           <div class="golden-card glass" aria-hidden="true">
             <div class="golden-head">
               <h4 style="margin:0; font-weight:800; font-size:15px;">ゴールデンモード</h4>
-              <div id="goldenStatus" style="font-weight:700; font-size:13px;">解禁なし</div>
+              <div id="goldenStatus" style="font-weight:700; font-size:13px;">未解禁</div>
             </div>
             <div class="golden-body">
               <div class="golden-actions">
