--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,14 @@
       </div>
       <!-- Golden overlay for full-background sparkles -->
       <div id="goldenOverlay" class="golden-overlay" aria-hidden="true"></div>
-<!-- Header -->
+      <!-- NFC hint (non-text) -->
+      <div class="nfc-hint" aria-hidden="true">
+        <span class="nfc-ring r1"></span>
+        <span class="nfc-ring r2"></span>
+        <span class="nfc-ring r3"></span>
+        <span class="nfc-tag"></span>
+      </div>
+      <!-- Header -->
       <header class="header">
         <div class="title">
           <img class="title-png" src="./images/title.png">
