--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
       <!-- Header -->
       <header class="header">
         <div class="title">
-          <img class="title-png" src="./images/title.png">
+          <img class="title-png" src="./images/NEW_title.png" alt="NFCスタンプラリー">
           <!-- <div class="title-big">NFC</div>
           <div class="title-sub">スタンプラリー</div> -->
         </div>
