アニメーション追加0114

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,11 @@
         </section>
       </main>
 
+      <!-- Stamp animation overlay -->
+      <div id="stampAni" class="stamp-ani" aria-hidden="true">
+        <div class="stamp-ani-sprite"></div>
+      </div>
+
       <!-- Bottom Nav（ここを強めのガラスに） -->
       <nav class="bottom-nav glass-nav" aria-label="ボトムナビゲーション">
         <button class="nav-btn is-active" data-target="stamp" aria-label="スタンプ">
