アニメーション追加0114

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
       <!-- Header -->
       <header class="header">
         <div class="title">
-          <img class="title-png" src="./images/NEW_title.png" alt="NFCスタンプラリー">
+          <div class="title-glass glass">
+            <img class="title-png" src="./images/NEW_title.png" alt="NFCスタンプラリー">
+          </div>
           <!-- <div class="title-big">NFC</div>
           <div class="title-sub">スタンプラリー</div> -->
         </div>
