--- a/public/index.html
+++ b/public/index.html
@@ -219,6 +219,6 @@
   </div>
 
   <!-- app -->
-  <script src="./js/script.js" defer></script>
+  <script src="./js/script.js?v=20250115" defer></script>
 </body>
 </html>
