--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
             <h2 class="page-title">プロフィール</h2>
             <div id="user-info" style="display: none;">
               <p>ようこそ、<span id="display-username"></span>さん</p>
-              <button onclick="logout()">ログアウト</button>
+              <button class="chips-btn glass" type="button" onclick="logout()">ログアウト</button>
             </div>
             <button id="auth-trigger-btn" class="chips-btn glass" type="button" onclick="openAuthModal()">ログイン/会員登録</button>
             <button class="danger" type="button" id="resetBtn2">進捗リセット</button>
