--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/stylesheet.css" />
 </head>
 <body>
+  <div class="bg-layer" aria-hidden="true"></div>
   <div class="device">
     <div class="phone">
       <div class="app">
