--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="theme-color" content="#9ebbe6" />
   <title>NFCスタンプラリー</title>
   <link rel="stylesheet" href="./css/stylesheet.css" />
 </head>
