--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <meta name="theme-color" content="#9ebbe6" />
   <title>NFCスタンプラリー</title>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/stylesheet.css" />
 </head>
 <body>
@@ -176,8 +177,8 @@
             <div id="user-info" style="display: none;">
               <p>ようこそ、<span id="display-username"></span>さん</p>
               <div class="profile-actions">
-                <button class="chips-btn glass" type="button" onclick="logout()">ログアウト</button>
-                <button class="danger" type="button" id="resetBtn2">進捗リセット</button>
+                <button class="chips-btn glass danger" type="button" onclick="logout()">ログアウト</button>
+                <button id="rankingBtn" class="chips-btn glass" type="button">ランキング</button>
               </div>
             </div>
             <button id="auth-trigger-btn" class="chips-btn glass" type="button" onclick="openAuthModal()">ログイン/会員登録</button>
@@ -206,6 +207,16 @@
                   <p id="auth-toggle-text" class="auth-toggle-btn" onclick="toggleAuthMode()">新規登録はこちら</p>
                 </div>
               </div>
+            </div>
+          </div>
+          <div id="rankingModal" class="ranking-modal" aria-hidden="true">
+            <div class="ranking-backdrop" data-close="1"></div>
+            <div class="ranking-panel glass" role="dialog" aria-modal="true" aria-label="ランキング">
+              <div class="ranking-head">
+                <div class="ranking-title">ランキング</div>
+                <button class="modal-close" type="button" data-close="1">?</button>
+              </div>
+              <div id="rankingList" class="ranking-list"></div>
             </div>
           </div>
 
@@ -256,6 +267,26 @@
           <div id="modalBody" class="modal-body"></div>
         </div>
       </div>
+      <div id="paySuccess" class="pay-success" aria-hidden="true">
+        <div class="pay-success-card">
+          <div class="pay-success-title">決済完了</div>
+          <div class="pay-success-amount">
+            <span id="paySuccessAmount">0</span>
+            <span class="pay-success-unit">P</span>
+          </div>
+          <div class="pay-success-sub">ご利用ありがとうございました</div>
+          <div class="pay-success-consumed">
+            消費ポイント <span id="paySuccessConsumed">0</span>P
+          </div>
+        </div>
+      </div>
+      <div id="completeOverlay" class="complete-overlay" aria-hidden="true">
+        <div class="complete-card glass">
+          <div class="complete-title">congratulation!!</div>
+          <div class="complete-text">全てのスタンプを獲得しました。</div>
+          <button id="completeBonusBtn" class="pay-primary" type="button">100Pを受け取る</button>
+        </div>
+      </div>
       <div id="siteInfoOverlay" class="site-info" aria-hidden="true">
         <div class="site-info-top">
           <img class="site-info-title" src="./images/NEW_title.png" alt="NFCスタンプラリー">
@@ -291,3 +322,5 @@
   <script src="./js/script.js?v=20250115" defer></script>
 </body>
 </html>
+
+
